Fix some spacing issues

--- a/src/pages/contact/contact.module.css
+++ b/src/pages/contact/contact.module.css
@@ -29,21 +29,29 @@
 }
 
 .form {
-  margin: auto;
-  padding: 5%;
-  width: 80%;
+  justify-items: stretch;
 
+  column-gap: 2em;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  column-gap: 2em;
-  align-items: center;
+
+  box-sizing: border-box;
+  margin: 5% auto 0 auto;
+  width: 80%;
+}
+
+.form input,
+.form textarea {
+  width: 100%;
+}
+
+.form input {
+  padding: 2% 0 2% 2%;
 }
 
 .input {
   border-radius: 5px;
   border: 1px solid var(--helen-fade-out);
-  padding: 2%;
-  width: 100%;
 }
 
 .textarea {
@@ -55,20 +63,30 @@
 
 .textarea textarea {
   min-height: 200px;
-  width: 100%;
   border: 1px solid var(--helen-fade-out);
   border-radius: 5px;
-  padding: 2%;
+  padding: 1% 0 1% 1%;
+}
+
+textarea::placeholder,
+input::placeholder {
+  color: var(--helen-fade-out);
 }
 
 .button {
   grid-row: 3;
   grid-column: 2;
+
+  margin-top: 5%;
 }
 
 .button button {
-  float: right;
-  padding: 1%;
   background-color: var(--helen-fade-out);
-  color: var(--helen-white);
+  color: var(--helen-black);
+  font-size: 2em;
+  cursor: pointer;
+  float: right;
+  height: 75px;
+  width: 200px;
+  font-weight: bold;
 }
